[package]
name = "opcua-integration"
version = "0.12.1"                          # OPCUARustVersion
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2024"

[dev-dependencies]
log = "0.4"
chrono = "0.4"

[dev-dependencies.opcua]
path = "../lib"
version = "0.12.1" # OPCUARustVersion
features = ["all"]
