[package]
    authors=[
        "Adam Lock <locka99@gmail.com>",
    ]
    categories=[
        "embedded",
        "network-programming",
    ]
    description="OPC UA client and server API"
    documentation="https://docs.rs/opcua/"
    edition="2018"
    homepage="https://github.com/locka99/opcua"
    keywords=[
        "opcua",
        "opc",
        "ua",
    ]
    license="MPL-2.0"
    name="opcua"
    readme="../README.md"
    version="0.12.0" # OPCUARustVersion

[lib]
    name="opcua"

[badges]
    appveyor ={repository="locka99/opcua"}
    travis-ci={repository="locka99/opcua"}

[features]
    all=[
        "server",
        "client",
        "console-logging",
        "http",
    ]
    default=[
        "server",
        "client",
    ]
    # This is for CI/CD testing on platforms with unresolved OpenSSL deps, don't use otherwise.
    test-vendored-openssl=[
        "all",
        "vendored-openssl",
    ]
    # Server default settings
    server=[
        "generated-address-space",
        "discovery-server-registration",
    ]
    # Client default settings
    client=[
    ]
    # Console logging just installs a logger that writes out to the screen, useful for general logging
    console-logging=[
        "env_logger",
    ]
    # Includes all the code to populate the address space with the default node set. This is something that embedded
    # systems may or may not require.
    generated-address-space=[
    ]
    # Allows a server to register itself with a local discovery server. It does so by becoming a client to the LDS,
    # which brings in a dependency to opcua-client. Omitting the feature saves some memory.
    discovery-server-registration=[
        "client",
    ]
    # OpenSSL can be compiled and statically linked to with this feature
    vendored-openssl=[
        "openssl/vendored",
    ]
    # Servers might want to show a web server with metric / diagnostic info
    http=[
        "actix-web",
    ]

[dependencies]
    chrono={version="0.4", features=[
        "serde",
    ]}
    log="*"
    # Enable deadlock_detection if there are any deadlocks in sync code
    base64="*"
    bitflags="*"
    byteorder="*"
    bytes="*"
    derivative="*"
    foreign-types="0.3"
    futures="*"
    gethostname="*"
    lazy_static="*"
    libc="*"
    openssl="*"
    openssl-sys="*"
    parking_lot={version="*", features=[
        "send_guard",
    ]}
    regex="*"
    serde="*"
    serde_derive="*"
    serde_json="*"
    serde_yaml="*"
    time="0.1"
    tokio={version="*", features=[
        "full",
    ]}
    tokio-util={version="*", features=[
        "codec",
    ]}
    url="*"
    uuid={version="*", features=[
        "v4",
    ]}

    [dependencies.env_logger]
        optional=true
        version ="*"

    [dependencies.actix-web]
        optional=true
        version ="0.7"

[dev-dependencies]
    rustc-serialize="*"
    serde_json     ="*"
    tempdir        ="*"
