[package]
name = "opcua-chess-server"
version = "0.12.1"                          # OPCUARustVersion
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2024"

[dependencies]
uci = "0.1.1"

[dependencies.opcua]
path = "../../lib"
version = "0.12.1"                       # OPCUARustVersion
features = ["server", "console-logging"]
