[package]
name = "opcua-demo-server"
version = "0.12.1"                          # OPCUARustVersion
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2024"

[features]
vendored-openssl = ["opcua/vendored-openssl"]

[dependencies]
chrono = "0.4"
log = "0.4"
rand = "0.7"
log4rs = "1.1"
lazy_static = "1.4.0"
pico-args = "0.5"

[dependencies.opcua]
path = "../../lib"
version = "0.12.1" # OPCUARustVersion
features = ["all"]
