[package]
name = "opcua-mqtt-client"
version = "0.12.1"                          # OPCUARustVersion
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2024"

[dependencies]
pico-args = "0.5"
rumqttc = "0.17.0"

[dependencies.opcua]
path = "../../lib"
version = "0.12.1"                       # OPCUARustVersion
features = ["client", "console-logging"]
