[package]
name = "opcua-web-client"
version = "0.12.1"                          # OPCUARustVersion
authors = ["Adam Lock <locka99@gmail.com>"]
edition = "2024"

[dependencies]
actix = "0.7"
actix-web = "0.7"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
pico-args = "0.5"
tokio = { version = "1", features = ["full"] }

[dependencies.opcua]
path = "../../lib"
version = "0.12.1"                       # OPCUARustVersion
features = ["client", "console-logging"]
